--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular-google-maps": "^2.2.1",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "method-override": "^2.3.5",
