--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
   "devDependencies": {
     "connect-livereload": "^0.5.4",
     "gulp": "^3.9.0",
-    "gulp-live-server": "0.0.29",
+    "gulp-nodemon": "^2.0.6",
     "gulp-sass": "^2.1.1",
-    "gulp-util": "^3.0.7",
     "path": "^0.12.7",
     "tiny-lr": "^0.2.1"
   }
