--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
+    "linq": "^3.0.5",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
     "mysql": "^2.10.2"
