base commit before oAuth

--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.3",
+    "express-session": "^1.13.0",
     "geolib": "^2.0.20",
     "linq": "^3.0.5",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
-    "mysql": "^2.10.2"
+    "mysql": "^2.10.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "connect-livereload": "^0.5.4",
